# agent-crucible

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install-plugin.sh  pyproject.toml
docs/: 项目完整文档.md
docs/superpowers/: README.md
marketplace/.claude-plugin/: marketplace.json
plugin/adversarial-code-review/: CLAUDE.md  README.md  package.json
plugins/agent-crucible/: CLAUDE.md  README.md
src/codex_claude_orchestrator/: agent_registry.py  claude_bridge.py  claude_window.py  cli.py  policy_gate.py  run_recorder.py  tmux_console.py
tests/: test_agent_registry.py  test_claude_bridge.py  test_claude_window.py  test_cli.py  test_policy_gate.py  test_run_recorder.py  test_tmux_console.py  test_verification_runner.py
tests/cli/: test_cli.py
tests/crew/: test_controller.py  test_gates.py  test_models.py  test_readiness.py  test_scope.py  test_supervisor_loop.py  test_supervisor_loop_step.py
tests/mcp_server/: test_crew_context_tools.py  test_crew_decision_tools.py  test_crew_execution_tools.py  test_crew_lifecycle_tools.py  test_crew_run.py  test_crew_run_tools.py  test_integration.py  test_job_manager.py  test_server.py
tests/runtime/: test_native_claude_session.py
tests/ui/: test_server.py
tests/v4/: test_adversarial_workflow.py  test_artifacts.py  test_challenge_manager.py  test_completion.py  test_crew_runner.py  test_domain_events.py  test_domain_events_long_task.py  test_event_store.py  test_event_store_factory.py  test_ingest.py  test_long_task_supervisor.py  test_merge_transaction.py  test_message_ack.py  test_outbox.py  test_projections.py  (+9 more)
(+63 files in other folders)
